[gd_scene load_steps=3 format=3 uid="uid://cce628jqfsyu8"]

[ext_resource type="Script" path="res://upgradescreen.gd" id="1_6h4t8"]

[sub_resource type="LabelSettings" id="LabelSettings_0ts1x"]
font_size = 54

[node name="Screen" type="Node2D"]
script = ExtResource("1_6h4t8")

[node name="Label" type="Label" parent="."]
offset_left = 157.0
offset_top = 621.0
offset_right = 167.0
offset_bottom = 644.0
scale = Vector2(12.9846, 4.16753)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="Button" parent="."]
offset_left = 1591.0
offset_top = 85.0
offset_right = 1921.0
offset_bottom = 222.0

[node name="Label" type="Label" parent="Continue"]
layout_mode = 0
offset_left = 45.0
offset_top = 19.0
offset_right = 291.0
offset_bottom = 120.0
text = "Continue"
label_settings = SubResource("LabelSettings_0ts1x")

[node name="Label2" type="Label" parent="."]
offset_left = 58.229
offset_top = 608.946
offset_right = 72.229
offset_bottom = 631.946

[node name="Button3" type="Button" parent="."]
offset_left = 338.0
offset_top = 430.0
offset_right = 714.0
offset_bottom = 506.0
text = "Health
"

[node name="Button2" type="Button" parent="."]
offset_left = 895.0
offset_top = 437.0
offset_right = 1294.0
offset_bottom = 511.0
text = "Ammo"

[node name="Button" type="Button" parent="."]
offset_left = 598.0
offset_top = 295.0
offset_right = 1005.0
offset_bottom = 376.0
text = "Speed
"

[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
